[package]
name = "construct"
version = "0.1.0"
authors = ["junhaideng"]
description = "Auto generate setter and getter for Rust struct"
keywords = ["proc_macro", "procmacro", "Rust", "setter", "getter"]
edition = "2021"

[lib]
proc-macro = true

[dependencies]
quote = "1"
proc-macro2 = "1.0"
syn = "1.0"

[[test]]
path = "tests/proc.rs"
name = "proc"
